# beefree-sdk-mcp-v2-example-demo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: agent.py  beefree.py  config.py  main.py
static/: style.css  tokens.js
templates/: codemode.html  edit.html  index.html  integration.html  landing.html  palette.html  single.html  translate.html
templates/partials/: edit_workspace.html  execute_loading.html  palette_loading.html  palette_sequence.html  plan.html  plan_loading.html  sequence.html  single_loading.html  translate_loading.html  translate_sequence.html
